--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,4 +27,4 @@ jobs:
         with:
           push: true
           platforms: linux/amd64
-          tags: ${{ env.DOCKERHUB_REPOSITORY }}
+          tags: dockerpf312/xrxrwd
